[package]
name = "kvs"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
clap = "2.33.0"
failure = "0.1.5"
structopt = "0.2.18"
serde_json = "1.0.40"
serde = "1.0.97"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
walkdir = "2.2.9"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"
test = false
doctest = false
