[package]
name = "kvs"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
clap = "2.33.0"
failure = "0.1.5"
structopt = "0.2.18"
serde_json = "1.0.40"
serde = "1.0.97"
env_logger = "0.6.2"
sled = "0.24.1"
log-derive = "0.3.0"
derive-new = "0.5.7"

[dev-dependencies]
assert_cmd = "0.11.1"
criterion = "0.2.11"
predicates = "1.0.1"
rand = "0.7.0"
tempfile = "3.1.0"
walkdir = "2.2.9"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"
test = false
doctest = false

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"
test = false
doctest = false
